data/derived/fa15/progs/unify/prog1250.ml.out
Characters 12-16:
  let _ = add test hmm;;
              ^^^^
Error: This expression has type int set
       but an expression was expected of type 'a list
